# demon-hand-solver

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
demon_hand_solver/: __init__.py  __main__.py  card.py  count_call_util.py  deck.py  demon_hand_mcts.py  game_logic.py  gui.py  misc_ocr_debug.py  ocr_hand.py  pre_computation.py
